// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getOverview golden default options 1`] = `
{
  "context": 
"# Fixture project
Context note for the golden vault."
,
  "overview": [
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "welcome",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
        1,
      ],
      "keywords": [
        "lease",
        "parking",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "about": "Architecture Decision Records.",
      "keywordNotes": [
        1,
        1,
        1,
      ],
      "keywords": [
        "braintree",
        "outbox",
        "postgres",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "present",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "buried",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "collapsedFolders": 6,
      "contains": [
        "tenant-0",
        "tenant-1",
        "tenant-2",
        "tenant-3",
        "tenant-4",
        "tenant-5",
      ],
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 6,
      "path": "imports",
      "tags": [],
    },
    {
      "keywordNotes": [
        3,
        1,
      ],
      "keywords": [
        "swiftcart",
        "marketplace",
      ],
      "notes": 4,
      "path": "logs",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
        1,
      ],
      "keywords": [
        "asha",
        "lukas",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
    {
      "keywordNotes": [
        2,
      ],
      "keywords": [
        "api",
      ],
      "notes": 2,
      "path": "releases",
      "tags": [],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;

exports[`getOverview golden depth 3, keywords 8 1`] = `
{
  "context": 
"# Fixture project
Context note for the golden vault."
,
  "overview": [
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "welcome",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
        1,
      ],
      "keywords": [
        "lease",
        "parking",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "about": "Architecture Decision Records.",
      "keywordNotes": [
        1,
        1,
        1,
      ],
      "keywords": [
        "braintree",
        "outbox",
        "postgres",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "present",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "buried",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "collapsedFolders": 6,
      "contains": [
        "tenant-0",
        "tenant-1",
        "tenant-2",
        "tenant-3",
        "tenant-4",
        "tenant-5",
      ],
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 6,
      "path": "imports",
      "tags": [],
    },
    {
      "keywordNotes": [
        3,
        1,
      ],
      "keywords": [
        "swiftcart",
        "marketplace",
      ],
      "notes": 4,
      "path": "logs",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
        1,
      ],
      "keywords": [
        "asha",
        "lukas",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
    {
      "keywordNotes": [
        2,
      ],
      "keywords": [
        "api",
      ],
      "notes": 2,
      "path": "releases",
      "tags": [],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;

exports[`getOverview golden collapse disabled 1`] = `
{
  "context": 
"# Fixture project
Context note for the golden vault."
,
  "overview": [
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "welcome",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "note",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
        1,
      ],
      "keywords": [
        "lease",
        "parking",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "about": "Architecture Decision Records.",
      "keywordNotes": [
        1,
        1,
        1,
      ],
      "keywords": [
        "braintree",
        "outbox",
        "postgres",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "present",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "buried",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 1,
      "path": "imports/tenant-0",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 1,
      "path": "imports/tenant-1",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 1,
      "path": "imports/tenant-2",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 1,
      "path": "imports/tenant-3",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 1,
      "path": "imports/tenant-4",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
      ],
      "keywords": [
        "contract",
      ],
      "notes": 1,
      "path": "imports/tenant-5",
      "tags": [],
    },
    {
      "keywordNotes": [
        3,
        1,
      ],
      "keywords": [
        "swiftcart",
        "marketplace",
      ],
      "notes": 4,
      "path": "logs",
      "tags": [],
    },
    {
      "keywordNotes": [
        1,
        1,
      ],
      "keywords": [
        "asha",
        "lukas",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
    {
      "keywordNotes": [
        2,
      ],
      "keywords": [
        "api",
      ],
      "notes": 2,
      "path": "releases",
      "tags": [],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;
